@@ -24,6 +24,7 @@
 <% if( val.chatid || val.nick ) { %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script> 
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script> 
+  <script src="http://c1.chartaca.com/1.1.1/chartaca.js"></script>
   
   <script src="/js/qtip2/jquery.qtip.min.js"></script>
   <link rel="stylesheet" href="/js/qtip2/jquery.qtip.min.css" />
@@ -33,6 +34,7 @@
   <script src="/js/underscore.js"></script>
   <script src="/js/backbone.js"></script>
   <script src="/js/markdown.js"></script>
+
   <script src="/nowjs/now.js"></script>
   <script src="/js/stanzr.js?<%=Math.random()%>"></script>
 <% } %>
